[KULRICE-13331]  nav overlap ie fix

--- a/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/pageLayout/uif-pagelayout.less
+++ b/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/pageLayout/uif-pagelayout.less
@@ -1,3 +1,9 @@
+/** ie specific fix **/
+[data-role="Page"]
+{
+  display: block !important;
+}
+
 .uif-viewContentWrapper.has-navigation {
 	background-image: url(../images/nav-back.png);
 	background-repeat: repeat-y;
